# odoo

./: CLAUDE.md
openflow/: .env.example  .env.vercel.example  .gitignore  .vercelignore  CONTRIBUTING.md  Dockerfile  README.md  VERCEL_DEPLOYMENT.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-vercel.txt  requirements.txt  test_module_manual.py  vercel.json
openflow/alembic/: env.py
openflow/api/: index.py
openflow/docs/: VIEW_SYSTEM.md
openflow/examples/: view_system_demo.py
openflow/openflow/: __init__.py
openflow/openflow/server/: celery_app.py  cli.py  main.py
openflow/openflow/server/addons/: base_models.py
openflow/openflow/server/addons/account/: __init__.py  __manifest__.py
openflow/openflow/server/addons/auth/: __init__.py  __manifest__.py
openflow/openflow/server/addons/base/: __init__.py  __manifest__.py
openflow/openflow/server/addons/helpdesk/: __init__.py  __manifest__.py
openflow/openflow/server/addons/mail/: __init__.py  __manifest__.py
openflow/openflow/server/addons/repair/: __init__.py  __manifest__.py
openflow/openflow/server/addons/stock/: __init__.py  __manifest__.py
openflow/openflow/server/config/: settings.py
openflow/openflow/server/core/: database.py
openflow/openflow/server/core/api/: dependencies.py  exceptions.py  jsonrpc.py  router.py
openflow/openflow/server/core/modules/: __init__.py  data_loader.py  loader.py  module.py  registry.py
openflow/openflow/server/core/orm/: README.md  __init__.py  domain.py  fields.py  models.py  recordset.py  registry.py
openflow/openflow/server/core/security/: README.md  __init__.py  access_control.py  decorators.py  exceptions.py  jwt_handler.py  password.py  session.py
openflow/openflow/server/core/views/: __init__.py  inheritance.py  parser.py  renderer.py  validator.py
openflow/server/config/: init.sql
openflow/server/core/api/: __init__.py  rest.py  serializers.py
openflow/tests/: __init__.py  test_api.py  test_main.py  test_module_loader.py  test_orm_domain.py  test_orm_fields.py  test_orm_models.py  test_security_jwt.py  test_security_password.py  test_security_session.py  test_views.py
openflow/web/static/: index.html
openflow/web/static/css/: app.css
openflow/web/static/js/: action_manager.js  app.js  field_widgets.js  notification.js  rpc_service.js  view_manager.js  view_renderer.js
(+44 files in other folders)
